@@ -1,6 +1,6 @@
 /*
- * Copyright 2004-2018 H2 Group. Multiple-Licensed under the MPL 2.0,
- * and the EPL 1.0 (http://h2database.com/html/license.html).
+ * Copyright 2004-2019 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * and the EPL 1.0 (https://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
 package org.h2.test.db;
@@ -28,7 +28,7 @@ public abstract class TaskDef {
         TaskDef task;
         try {
             String className = args[0];
-            task = (TaskDef) Class.forName(className).newInstance();
+            task = (TaskDef) Class.forName(className).getDeclaredConstructor().newInstance();
             System.out.println("running");
         } catch (Throwable t) {
             System.out.println("init error: " + t);
