@@ -1,6 +1,6 @@
 /*
- * Copyright 2004-2018 H2 Group. Multiple-Licensed under the MPL 2.0,
- * and the EPL 1.0 (http://h2database.com/html/license.html).
+ * Copyright 2004-2019 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * and the EPL 1.0 (https://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
 package org.h2.test.unit;
@@ -63,9 +63,9 @@ public class TestClassLoaderLeak extends TestBase {
             }
         }
         DriverManager.registerDriver((Driver)
-                Class.forName("org.h2.Driver").newInstance());
+                Class.forName("org.h2.Driver").getDeclaredConstructor().newInstance());
         DriverManager.registerDriver((Driver)
-                Class.forName("org.h2.upgrade.v1_1.Driver").newInstance());
+                Class.forName("org.h2.upgrade.v1_1.Driver").getDeclaredConstructor().newInstance());
     }
 
     private static WeakReference<ClassLoader> createClassLoader() throws Exception {
@@ -114,9 +114,7 @@ public class TestClassLoaderLeak extends TestBase {
             if (c == null) {
                 try {
                     c = findClass(name);
-                } catch (SecurityException e) {
-                    return super.loadClass(name, resolve);
-                } catch (ClassNotFoundException e) {
+                } catch (SecurityException | ClassNotFoundException e) {
                     return super.loadClass(name, resolve);
                 }
                 if (resolve) {
